# prescripty

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  config.toml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: black.yml  codeql.yml  gh_pages.yml  lint.yml  pages.yml  pyapp.yml  test.yml
developers/: index.html
docs/: developers.md  index.md  license.md
docs/commands/: commands.md  fun.md  util.md
docs/reference/: index.md
getting_started/: index.html
license/: index.html
plugins/: internal.py  misc.py  miscellaneous.py  mod.py  moderation.py  utility.py
reference/: index.html
scripty/: __init__.py  __main__.py  bot.py  config.py  const.py  constants.py  errors.py
scripty/constants/: __init__.py  config.py
scripty/core/: __init__.py  app.py  errors.py  help.py
scripty/core/extensions/: __init__.py  _help.py  errors.py
scripty/core/modules/: dev.py  errors.py
scripty/extensions/: __init__.py  error.py  fun.py  help.py  misc.py  mod.py  util.py
scripty/functions/: __init__.py  cache.py  color.py  datastore.py  embed.py  embeds.py  helpers.py
scripty/modules/: __init__.py  automod.py  dev.py  fun.py  help.py  magyk.py  misc.py  mod.py  safe.py  shield.py  util.py
scripty/plugins/: error.py  fun.py  internal.py  misc.py  miscellaneous.py  mod.py  moderation.py  util.py  utility.py
search/: search_index.json
stylesheets/: extra.css
tests/: config.py
tests/functions/: __init__.py  helpers.py
tests/modules/: fun.py  mod.py
tests/scripty/functions/: test_helpers.py
