[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 62.1.0", "wheel"]

[project]
authors = [{name = "Erich Nguyen", email = "erich.nguyen@outlook.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Typing :: Typed",
]
description = "Imagine a Bot"
keywords = [
  "dependency-injection",
  "discord",
  "discord-api",
  "discord-bot",
  "hikari",
  "hikari-miru",
  "hikari-tanchi",
  "hikari-tanjun",
  "python",
  "scripty",
]
license = {file = "LICENSE"}
maintainers = [
  {name = "Erich Nguyen", email = "erich.nguyen@outlook.com"},
]
name = "Scripty"
readme = "README.md"
requires-python = ">=3.10"
version = "1.0.0a6"

dependencies = [
  "aiohttp",
  "alluka",
  "dateparser",
  "gpytranslate",
  "hikari",
  "hikari-miru",
  "hikari-tanchi",
  "hikari-tanjun",
  "psutil",
  "pyright",
  "toml",
  "uvloop; sys_platform != 'win32'",
]

[project.urls]
changelog = "https://scriptybot.web.app" # TODO: Add changelog
documentation = "https://scriptybot.web.app" # TODO: Add documentation
homepage = "https://scriptybot.web.app" 
repository = "https://github.com/scriptydev/prescripty" 

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
include = ["./scripty"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportImportCycles = "warning"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportMissingTypeStubs = "none"
reportOptionalMemberAccess = "warning"
reportOverlappingOverload = "none"
reportUnknownMemberType = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUntypedFunctionDecorator = "warning"
